[gd_scene load_steps=11 format=2]

[ext_resource path="res://Grafik/Assets/GUI/btnMainmenu.png" type="Texture" id=1]
[ext_resource path="res://Szenen/GUI/BtnMainMenuBg.gd" type="Script" id=2]
[ext_resource path="res://Szenen/GUI/MainMenuBtn.gd" type="Script" id=3]
[ext_resource path="res://Grafik/Assets/GUI/EscMenu.png" type="Texture" id=4]
[ext_resource path="res://Szenen/GUI/EscapeMenu.gd" type="Script" id=5]
[ext_resource path="res://Szenen/GUI/Help.tscn" type="PackedScene" id=6]
[ext_resource path="res://Szenen/GUI/Savesucess.tscn" type="PackedScene" id=7]
[ext_resource path="res://Grafik/Assets/GUI/sound.png" type="Texture" id=8]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = SubResource( 6 )

[node name="EscMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0, 0.1025, 0.15, 0.933333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Sprite" parent="."]
position = Vector2( 640, 340 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Button" type="Node2D" parent="."]
position = Vector2( 639.512, 337.8 )
script = ExtResource( 3 )

[node name="Hauptmenu" type="Sprite" parent="Button"]
position = Vector2( 0, -90 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="label" type="Control" parent="Button/Hauptmenu"]
pause_mode = 1
margin_left = -155.0
margin_top = -28.0
margin_right = 156.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2

[node name="Label" type="Label" parent="Button"]
margin_left = -149.0
margin_top = -112.0
margin_right = 150.0
margin_bottom = -68.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 7 )
text = "Zum Hauptmen√º"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Button2" type="Node2D" parent="."]
position = Vector2( 639.512, 401.8 )
script = ExtResource( 3 )

[node name="Speichern" type="Sprite" parent="Button2"]
position = Vector2( 0, -90 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="label" type="Control" parent="Button2/Speichern"]
pause_mode = 1
margin_left = -155.0
margin_top = -22.0
margin_right = 156.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2

[node name="Label" type="Label" parent="Button2"]
margin_left = -155.0
margin_top = -112.0
margin_right = 155.0
margin_bottom = -68.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 7 )
text = "Spiel speichern"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Control" type="Control" parent="."]
margin_left = 791.512
margin_top = 164.19
margin_right = 831.512
margin_bottom = 204.19
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" parent="." instance=ExtResource( 6 )]
position = Vector2( 652.032, 378.379 )
z_index = 1

[node name="Savesucess" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 639.512, 339.8 )
z_index = 1

[node name="Music" type="TextureRect" parent="."]
margin_left = 620.0
margin_top = 430.0
margin_right = 639.0
margin_bottom = 447.0
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
texture = ExtResource( 8 )

[connection signal="clicked" from="Button/Hauptmenu" to="." method="_on_Hauptmenu_clicked"]
[connection signal="gui_input" from="Button/Hauptmenu/label" to="Button/Hauptmenu" method="_on_label_gui_input"]
[connection signal="mouse_entered" from="Button/Hauptmenu/label" to="Button/Hauptmenu" method="_on_label_mouse_entered"]
[connection signal="mouse_exited" from="Button/Hauptmenu/label" to="Button/Hauptmenu" method="_on_label_mouse_exited"]
[connection signal="clicked" from="Button2/Speichern" to="." method="_on_Speichern_clicked"]
[connection signal="gui_input" from="Button2/Speichern/label" to="Button2/Speichern" method="_on_label_gui_input"]
[connection signal="mouse_entered" from="Button2/Speichern/label" to="Button2/Speichern" method="_on_label_mouse_entered"]
[connection signal="mouse_exited" from="Button2/Speichern/label" to="Button2/Speichern" method="_on_label_mouse_exited"]
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="gui_input" from="Music" to="." method="_on_Music_gui_input"]
